# hs_crs_analysis_gui

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  build_macos.sh  build_windows_cpu.ps1  build_windows_pytorch.ps1  composite_image.py  docs-requirements.txt  environment-pytorch.yml  environment.yml  hs-mosaic.bat  hs_crs_analysis_gui_cpu.spec  hs_crs_analysis_gui_macos.spec  hs_crs_analysis_gui_pytorch.spec  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_hs_crs_analysis_gui.bat  wavelength.example.json
.github/workflows/: docs.yml
contents/: analysis_manager.py  color_manager.py  cross_correlate.py  cross_correlation_stitcher.py  custom_pyqt_objects.py  darkmode.py  data_managers.py  data_widgets.py  fiji_saver.py  hs_image_view.py  multivariate_analyzer.py  nnls_pytorch.py  physical_units_manager.py  pyqt_overview.py  pyqtgraph_test.py  roi_manager_pg.py  rolling_ball_correction.py  rolling_ball_mask.py  scalebar.py  spectrum_loader.py  stitch_functions.py  stitch_manager.py  torch_nmf.py
debug/: fiji_16bit_colormaps.py  new_metadata.tif  random_image.tif
docs/: citation.md  concepts.md  essentials.md  index.md  installation.md  quickstart.md  standalone_windows.md  troubleshooting.md
docs/examples/: cars_srs_label_free.md  fluorescence_4d_unmixing.md  generate_synthetic_quickstart.py  index.md  reproduce_figure_1.md  stitching_and_preprocessing.md  swir_reflection.md  synthetic_quickstart.md
docs/examples/synthetic_quickstart_data/: README.txt  synthetic_hs_stack.tif  synthetic_reference_spectra.csv  wavelength.json
docs/methods/: nnmf_nnls_modes.md
docs/reference/: fiji_export.md  nnmf_nnls_modes.md  presets.md  roi_manager_and_seed_types.md  spectral_axis_and_wavelength_json.md
docs/tutorials/: 00_gui_and_pyqtgraph_basics.md  00a_publication_plots_matplotlibrc.md  01_cars_srs_roi_seeded_nnmf.md  01_loading_data.md  01a_spectral_axis_and_channel_labels.md  01b_stitching_tile_folders.md  02_analysis_modes.md  02_swir_fixed_h_nnls.md  02a_gpu_acceleration.md  03_fluorescence_4d_unmixing.md  03_seeds_spectral_and_spatial.md  03a_loading_custom_seed_spectra.md  03b_roi_manager.md  03c_suggest_rois.md  04_physical_units_and_rolling_ball.md  04_stitching_and_rolling_ball.md  05_presets_and_reuse.md  05_results_and_export.md  06_presets_and_reproducibility.md  07_workflow_checklist.md
hs_mosaic/: __init__.py  __main__.py  app.py  composite_image.py
hs_mosaic/assets/: __init__.py
hs_mosaic/widgets/: analysis_functions.py  analysis_manager.py  color_manager.py  cross_correlate.py  cross_correlation_stitcher.py  data_managers.py  data_widgets.py  hs_image_view.py  multivariate_analyzer.py  nnls_pytorch.py  physical_units_manager.py  roi_manager_pg.py  scalebar.py  spectral_axis.py  stitch_functions.py  stitch_manager.py  torch_nmf.py
pyqt demos/: false_color.py  pyqt_buttons_stored.py  pyqt_demo.py  pyqt_dock.py  pyqt_multiple_docks.py
pyqt_examples/: CustomGradient.py  grid_layout_example.py  highlight_pixels.py  optics_Example.py  pyqtgraph_demo.py  pyqtgraph_dock.py  pyqtgraph_imshow.py  pyside_overview.py
