[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hs-mosaic"
version = "0.9.2"
description = "Seeded multivariate analysis (NNMF / NNLS) of hyperspectral and multispectral microscopy data, with an interactive Qt GUI."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Manuel Kunisch", email = "mkunisch@physik.uni-bielefeld.de" },
]
maintainers = [
    { name = "Manuel Kunisch", email = "mkunisch@physik.uni-bielefeld.de" },
]
keywords = [
    "hyperspectral",
    "multispectral",
    "microscopy",
    "NNMF",
    "NMF",
    "NNLS",
    "spectral unmixing",
    "CARS",
    "SRS",
    "Raman",
    "fluorescence",
    "SWIR",
    "PyQt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "scikit-learn>=1.2",
    "tifffile>=2023.1.0",
    "pyqtgraph>=0.13",
    "PyQt5>=5.15",
    "qtawesome>=1.2",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
# CPU-only PyTorch backend (NNMF multiplicative-updates + FISTA NNLS on CPU).
# Users who want CUDA must install the matching torch wheel from
# https://pytorch.org/get-started/locally/ themselves; PyPI hosts CPU torch
# but not the CUDA variants.
gpu = ["torch>=2.0"]
torch = ["torch>=2.0"]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.1",
    "pytest>=7.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]

[project.gui-scripts]
# Using gui-scripts (not scripts) so on Windows the launcher is built
# without an attached console window. On Linux/macOS this is identical
# to a console_script entry.
hs-mosaic = "hs_mosaic.app:main"

[project.urls]
Homepage      = "https://manuel-kunisch.github.io/hs_crs_analysis_gui/"
Documentation = "https://manuel-kunisch.github.io/hs_crs_analysis_gui/"
Repository    = "https://github.com/manuel-kunisch/hs_crs_analysis_gui"
Issues        = "https://github.com/manuel-kunisch/hs_crs_analysis_gui/issues"
Changelog     = "https://github.com/manuel-kunisch/hs_crs_analysis_gui/releases"

# ── setuptools-specific configuration ─────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["hs_mosaic*"]
exclude = ["debug*", "pyqt_examples*", "pyqt demos*", "docs*", "site*", "build*", "dist*"]

[tool.setuptools.package-data]
hs_mosaic = [
    "assets/*",
    "assets/**/*",
]
